--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "@expo/metro-runtime": "~3.1.3",
+    "expo": "^49.0.23",
+    "expo-blur": "~12.4.1",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.72.10",
+    "react-native-web": "^0.19.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
