--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "expo": "^49.0.23",
     "expo-blur": "~12.4.1",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.11.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-web": "^0.19.11"
   },
   "devDependencies": {
